manifest/objects/ALTF__Sales_Process_Qualifier__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Qualifiers used by Sales Process. They can be maintained from the Playbook Admin App.</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Question__c</fullName>
        <description>The qualifier text displayed to the user when working an opportunity through the sales process</description>
        <inlineHelpText>The text for the qualifier / verifiable outcome, displayed to the user on the &quot;Sales Process&quot; tab in Altify.

To progress an opportunity through the pipeline, the user sets the status on the qualifiers associated with each stage in the sales pr</inlineHelpText>
        <label>Question</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Tip__c</fullName>
        <inlineHelpText>The help text associated with the qualifier / verifiable outcome. 

Use this section to provide instructions to the user on what the question is asking them to focus on, what steps they should take and/or what details they should provide in the co</inlineHelpText>
        <label>Tip</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__UI_Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Smart Qualifier cannot be set by a user on the playbook UI screen. 
It is anticipated that these qualifiers will be set by other means (triggers etc)</description>
        <inlineHelpText>A Smart Qualifier cannot be set by a user on the playbook UI screen. 
It is anticipated that these qualifiers will be set by other means (triggers etc)</inlineHelpText>
        <label>Smart Qualifier</label>
        <type>Checkbox</type>
    </fields>
    <label>Altify Sales Process Qualifier</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <columns>NAME</columns>
        <columns>ALTF__Question__c</columns>
        <columns>ALTF__Tip__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Qualifier Shortname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Sales Process Qualifiers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>